--- a/index.html
+++ b/index.html
@@ -74,6 +74,103 @@
         </div>
     </section>
 
+    <Section class="container subscribe">
+        <div>
+            <img src="./img/secondmen.png" alt="secondmen">
+
+        </div>
+        <div>
+            <h2 class="subscribe_h2">
+                Subscription index 
+            </h2>
+            <form >
+                <input class="input" type="email" placeholder="email">
+                <button class="button button_violet">
+                    Try
+                </button>
+            </form>
+
+        </div>
+    </Section>
+
+    <section class="container plan">
+        <h2 class="plan_h2">
+            Get the right plan for future
+        </h2>
+
+        <div class="plan_flex">
+            <div class="item">
+                <p class="item_p">
+                    Starter
+                </p>
+                <h3 class="item_h3">
+                    Free <span>/month</span> 
+                </h3 >
+                <ul>
+                    <li class="item_li">
+                        1 Website
+                    </li>
+                    <li class="item_li">
+                        5 GB Hosting
+                    </li>
+                    <li class="item_li">
+                        Limited Support
+                    </li>
+                </ul>
+                <button class="button button_item">
+                    Get Started
+                </button>
+            </div>
+
+            <div class="item">
+                <p class="item_p">
+                    Premium 
+                </p>
+                <h3 class="item_h3">
+                    $29<span>/month</span> 
+                </h3 >
+                <ul>
+                    <li class="item_li">
+                        10 Website
+                    </li>
+                    <li class="item_li">
+                        15 GB Hosting
+                    </li>
+                    <li class="item_li">
+                        Premium Support
+                    </li>
+                </ul>
+                <button class="button button_item">
+                    Get Started
+                </button>
+            </div>
+
+            <div class="item">
+                <p class="item_p">
+                    Enterprise 
+                </p>
+                <h3 class="item_h3">
+                    $49<span>/month</span> 
+                </h3 >
+                <ul>
+                    <li class="item_li">
+                        Unlimited Website
+                    </li>
+                    <li class="item_li">
+                        50 GB Hosting
+                    </li>
+                    <li class="item_li">
+                        Premium Support
+                    </li>
+                </ul>
+                <button class="button button_item">
+                    Get Started
+                </button>
+            </div>
+
+        </div>
+    </section>
+
 
     <footer class="footer">
         <div class="container-f footer_flex" >
